Bug 97437 - PIVOTTABLE CRASH after creating the pivot table
Summary: PIVOTTABLE CRASH after creating the pivot table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: highest critical
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.2.0
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2016-01-29 15:55 UTC by Marina Latini (SUSE)
Modified: 2016-10-25 19:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Strace of the crash (1.67 MB, application/gzip)
2016-01-29 15:55 UTC, Marina Latini (SUSE)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marina Latini (SUSE) 2016-01-29 15:55:06 UTC
Created attachment 122277 [details]
Strace of the crash

Steps:

1) open the daily build
2) create a new calc spreadsheet
3) Enter some random data in Sheet1
4) create a pivot table using the data as source

Current:
LibreOffice crashes. The auto recovery process restore the original Sheet1 and a second sheet with the pivot table.

Expected:
LibreOffice creates the pivot table

crash with:
Version: 5.2.0.0.alpha0+
Build ID: d1a49df6833ff16f5cbaf98534eaae62693e520b
CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-01-29_02:01:58
Locale: it-IT (it_IT.UTF-8)

Work fine with:
Version: 5.2.0.0.alpha0+
Build ID: d95d9d7f908419f397941ef60ac6ced3261c9b87
CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-01-19_00:40:21
Locale: it-IT (it_IT.UTF-8)

The crash is a regression related to commit:
http://cgit.freedesktop.org/libreoffice/core/commit/?id=0b9dd2446c33fda77fa18eec7ae86831af9c82e6
Comment 1 raal 2016-01-29 20:34:19 UTC
I can confirm crash with Version: 5.2.0.0.alpha0+
Build ID: d1a49df6833ff16f5cbaf98534eaae62693e520b
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-01-29_02:01:58

Katarina, could you take a look? The crash is a regression related to commit:
http://cgit.freedesktop.org/libreoffice/core/commit/?id=0b9dd2446c33fda77fa18eec7ae86831af9c82e6
Thanks
Comment 2 Katarina Behrens (Inactive) 2016-01-31 23:31:56 UTC
Sure, Marina was showing me the bug live on hackfest
Comment 3 Commit Notification 2016-02-03 21:39:03 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c0fa223db5f5c55ffb76dbb10b0e8187962f0cd8

tdf#97437: Don't crash when creating new pivot table

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.