tdf#97437: Don't crash when creating new pivot table

regression from 0b9dd2446c33fda77 -- *sigh* most of the time is
the old pivot table not there.

Change-Id: I85ea03780f175aa6e4fb6859497b6dda12fa7d11
Reviewed-on: https://gerrit.libreoffice.org/22057
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
Tested-by: Katarina Behrens <Katarina.Behrens@cib.de>